--- a/src/app/main/layout/master/branch-offices/branch-offices.component.html
+++ b/src/app/main/layout/master/branch-offices/branch-offices.component.html
@@ -17,7 +17,7 @@
             <div class="tile">
                 <div class="tile-body">
                     <div class="col-sm-12 text-right mb-3">
-                        <a class="btn btn-sm btn-success" [routerLink]="['addBranchOffice']">Add Branch Office</a>
+                        <button class="btn btn-sm btn-success" [routerLink]="['addBranchOffice']">Add Branch Office</button>
                     </div>
                     <div class="col-sm-12 table-responsive">
                         <table class="table table-hover text-center dataTable">
@@ -26,34 +26,34 @@
                                 <th>S No</th>
                                 <th [ngClass]="branchOfficeQuery.sortOrder == 'name'?'headActive' : ''"
                                     accessKey="name" (click)="clickSorting($event)">Name
-                                    <i *ngIf="sortOrder != 'name'" class="fa fa-sort"></i>
-                                    <i *ngIf="sortOrder == 'name'" class="fa"
-                                       [ngClass]="orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder != 'name'" class="fa fa-sort"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder == 'name'" class="fa"
+                                       [ngClass]="branchOfficeQuery.orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
                                 </th>
                                 <th [ngClass]="branchOfficeQuery.sortOrder == 'cityName'?'headActive' : ''"
                                     accessKey="cityName" (click)="clickSorting($event)">City
-                                    <i *ngIf="sortOrder != 'cityName'" class="fa fa-sort"></i>
-                                    <i *ngIf="sortOrder == 'cityName'" class="fa"
-                                       [ngClass]="orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder != 'cityName'" class="fa fa-sort"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder == 'cityName'" class="fa"
+                                       [ngClass]="branchOfficeQuery.orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
                                 </th>
                                 <th>Manager</th>
                                 <th [ngClass]="branchOfficeQuery.sortOrder == 'contact'?'headActive' : ''"
                                     accessKey="contact" (click)="clickSorting($event)">Contact
-                                    <i *ngIf="sortOrder != 'contact'" class="fa fa-sort"></i>
-                                    <i *ngIf="sortOrder == 'contact'" class="fa"
-                                       [ngClass]="orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder != 'contact'" class="fa fa-sort"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder == 'contact'" class="fa"
+                                       [ngClass]="branchOfficeQuery.orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
                                 </th>
                                 <th [ngClass]="branchOfficeQuery.sortOrder == 'email'?'headActive' : ''"
                                     accessKey="email" (click)="clickSorting($event)">Email
-                                    <i *ngIf="sortOrder != 'email'" class="fa fa-sort"></i>
-                                    <i *ngIf="sortOrder == 'email'" class="fa"
-                                       [ngClass]="orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder != 'email'" class="fa fa-sort"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder == 'email'" class="fa"
+                                       [ngClass]="branchOfficeQuery.orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
                                 </th>
                                 <th [ngClass]="branchOfficeQuery.sortOrder == 'address'?'headActive' : ''"
                                     accessKey="address" (click)="clickSorting($event)">Address
-                                    <i *ngIf="sortOrder != 'address'" class="fa fa-sort"></i>
-                                    <i *ngIf="sortOrder == 'address'" class="fa"
-                                       [ngClass]="orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder != 'address'" class="fa fa-sort"></i>
+                                    <i *ngIf="branchOfficeQuery.sortOrder == 'address'" class="fa"
+                                       [ngClass]="branchOfficeQuery.orderBy == 'asc'? 'fa-sort-asc': 'fa-sort-desc'"></i>
                                 </th>
                                 <th>Action</th>
                             </tr>
