--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -307,8 +307,8 @@
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Transactions
                         </a>
                     </li>
-                    <li class="waves-effect waves-light" *ngIf="canAccessModule('officeexpenses')">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                    <li class="waves-effect waves-light" *ngIf="canAccessModule('officeExpenses')">
+                        <a class="treeView-item" [routerLink]="['officeExpenses']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Office Expenses
                         </a>
                     </li>
