--- a/src/app/main/layout/master/suppliers/suppliers.component.html
+++ b/src/app/main/layout/master/suppliers/suppliers.component.html
@@ -134,26 +134,24 @@
     </div>
     <div class="modal-body">
         <form name="fillingStationForm" class="form-horizontal" role="form">
-            <div class="offset-1 form-group">
-                <label class="col-sm-3 control-label checkbox ls text-uppercase text-600 font-weight-semi-bold" for="fname">Name</label>
-                <label class="col-sm-8">
-                    <input type="text" id="fname" class="form-control" [(ngModel)]="addSupplierQuery.name" [ngModelOptions]="{standalone: true}" placeholder="Name">
-                </label>
+            <div class="col-sm-8 col-12 offset-2 form-group">
+                <label>Name<span class="mandatory-field">*</span></label>
+                <input type="text" id="fname" class="form-control-sm form-control" [(ngModel)]="addSupplierQuery.name" [ngModelOptions]="{standalone: true}" placeholder="Name">
             </div>
-            <div class="offset-1 form-group">
-                <label class="col-sm-3 control-label checkbox ls text-uppercase text-600 font-weight-semi-bold" for="fcontact">Contact</label>
-                <label class="col-sm-8">
-                    <input type="text" id="fcontact" class="form-control" [(ngModel)]="addSupplierQuery.contact" [ngModelOptions]="{standalone: true}" placeholder="Contact">
-                </label>
+            <div class="col-sm-8 col-12 offset-2 form-group">
+                <label>Contact<span class="mandatory-field">*</span></label>
+                <input type="text" id="fcontact" class="form-control" [(ngModel)]="addSupplierQuery.contact" [ngModelOptions]="{standalone: true}" placeholder="Contact">
+
             </div>
-            <div class="offset-1 form-group">
-                <label class="col-sm-3 control-label checkbox ls text-uppercase text-600 font-weight-semi-bold" for="activeInactive" style="padding-top:0; ">Active</label>
-                <label class="col-sm-1">
-                    <input type="checkbox" id="activeInactive" [(ngModel)]="addSupplierQuery.active" [ngModelOptions]="{standalone: true}">
-                </label>
+            <div class="col-sm-8 col-12 offset-2 form-group">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="active"
+                           [(ngModel)]="addSupplierQuery.active" [ngModelOptions]="{standalone: true}">
+                    <label class="form-check-label" for="active">Active</label>
+                </div>
             </div>
-            <div class="offset-1 form-group">
-                <label class="col-sm-4 control-label checkbox ls text-uppercase text-600 font-weight-semi-bold" for="activeInactive">Party Type</label>
+            <div class="col-sm-8 col-12 offset-2 form-group">
+                <label>Party Type<span style="color: red">:</span></label>&nbsp;&nbsp;
                 <label class="radio-inline control-label checkbox ls">
                     <input type="radio" name="CREDITORS" value="CREDITORS" [(ngModel)]="addSupplierQuery.partyType" [ngModelOptions]="{standalone: true}"> Creditors
                 </label> &nbsp;&nbsp;
