--- a/src/app/main/layout/cargo/loading-sheet/loading-sheet.component.html
+++ b/src/app/main/layout/cargo/loading-sheet/loading-sheet.component.html
@@ -68,7 +68,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-sm-4 col-xs-5 col-12  form-group mb-auto mt-auto" style="display: inherit">
+                            <div class="col-sm-5 col-12  form-group mb-auto mt-auto" style="display: inherit">
                                 <div class="form-check mr-2">
                                     <input class="form-check-input" type="radio" value="paidToPay"
                                            id="paidTopay" name="status" [(ngModel)]="filterString"
