--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -243,8 +243,8 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('servicereports')">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
-                            <i class="icon fa fa-university" aria-hidden="true"></i>Service Reports
+                        <a class="treeView-item" [routerLink]="['serviceReports/' + newDate]" [routerLinkActive]="['active']">
+                            <i class="icon fa fa-university" aria-hidden="true"></i>Service Report
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
