--- a/src/app/main/layout/reports/service-report-by-service/service-report-by-service.component.html
+++ b/src/app/main/layout/reports/service-report-by-service/service-report-by-service.component.html
@@ -60,12 +60,10 @@
                                 <tbody>
                                 <tr *ngFor="let reports of serviceReportsByServiceNumber">
                                     <td *ngIf="reports.attrs.formId">
-                                        <a class="cus-a" [routerLink]="['serviceForm/' + reports.attrs.formId]"
-                                        target="_blank">{{reports.jDate}} </a>
+                                        <a class="cus-a" [routerLink]="['serviceForm/' + reports.attrs.formId]">{{reports.jDate}} </a>
                                     </td>
                                     <td *ngIf="!reports.attrs.formId">
-                                        <a class="cus-a" [routerLink]="['serviceReport/' + reports.id]"
-                                        target="_blank">{{reports.jDate}} </a>
+                                        <a class="cus-a" [routerLink]="['serviceReport/' + reports.id]">{{reports.jDate}} </a>
                                     </td>
                                     <td>{{reports.advance}}</td>
                                     <td>{{reports.luggageIncome | numberFormatter}}</td>
