--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -288,7 +288,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('duereport')">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['dueReports']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-bus" aria-hidden="true"></i>Due Reports
                         </a>
                     </li>
